# process-twitch-log

./: .gitignore  Pipfile  README.md  bots.example  commands.example  emotes.example  generate_setup_cfg.py  pyproject.toml  setup.cfg
data/: .gitignore
process_twitch_log/: __init__.py
