[project]
name = "process-twitch-log"
version = "0.1.0"
description = "Removes uninteresting messages from Twitch (Chatterino) chatlogs."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Jeremias Pettinen", email = "hi@jeremi.as"}
]

[project.urls]
repository = "https://github.com/pettinen/process-twitch-log"

[project.scripts]
process-twitch-log = "process_twitch_log:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
