[tool.poetry]
name = "process-twitch-log"
version = "1.1.0"
description = "Removes uninteresting messages from Twitch (Chatterino) chatlogs."
authors = ["Jeremias Pettinen <hi@jeremi.as>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/pettinen/process-twitch-log"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
process-twitch-log = "process_twitch_log:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
